# FerroxPlorer

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_0.4.1.md  build.rs  design_ref.html  开发文档.md
.github/workflows/: release.yml
installer/: installer.iss
src/: app.rs  config.rs  git.rs  main.rs  ui_bridge.rs  update.rs
src/fs/: clipboard.rs  default_app.rs  devices.rs  disk.rs  drag_out.rs  elevated.rs  hash.rs  highlight.rs  index.rs  metadata.rs  mod.rs  network.rs  openwith.rs  operations.rs  preview.rs  quickaccess.rs  recyclebin.rs  shell_menu.rs  shell_new.rs  sidebar_menu.rs  signature.rs  system_icons.rs.todo  tasks.rs  thumbnail.rs  video_preview.rs  virtualfs.rs  watcher.rs  web_preview.rs
ui/: action_bar.slint  command_palette.slint  conflict_dialog.slint  context_menu.slint  details_pane.slint  dual_pane.slint  file_grid.slint  file_icon.slint  file_list.slint  globals.slint  input_overlay.slint  main.slint  network_dialog.slint  pane_header.slint  progress_card.slint  properties_dialog.slint  quick_look.slint  rename_edit.slint  right_pane.slint  settings_panel.slint  sidebar.slint  splitter.slint  theme.slint  this_pc_view.slint  toolbar.slint
